@@ -1,0 +1,10 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<Installer>
+    <Name>SystemInfo Example</Name>
+    <Version>1.0.0</Version>
+    <Title>SystemInfo Example</Title>
+    <Publisher>The Qt Company</Publisher>
+    <!-- Directory name is used in component.xml -->
+    <StartMenuDir>Qt Installer Framework Example</StartMenuDir>
+    <TargetDir>@HomeDir@/IFWSystemInfoExample</TargetDir>
+</Installer>
