@@ -1,0 +1,8 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<Package>
+    <DisplayName>systemInfo example</DisplayName>
+    <Description>Shows the use of the systemInfo JS API.</Description>
+    <Version>1.0.0-1</Version>
+    <ReleaseDate>2013-01-01</ReleaseDate>
+    <Script>installscript.qs</Script>
+</Package>
