@@ -13,7 +13,7 @@ BUILD_EXAMPLES = $$(BUILDEXAMPLES)
 isEmpty(BUILD_EXAMPLES):BUILD_EXAMPLES=$${BUILDEXAMPLES}
 !isEmpty(BUILD_EXAMPLES):SUBDIRS += examples
 
-!minQtVersion(5, 3, 0) {
+!minQtVersion(5, 4, 0) {
     message("Cannot build Qt Installer Framework with Qt version $${QT_VERSION}.")
-    error("Use at least Qt 5.3.0.")
+    error("Use at least Qt 5.4.0.")
 }
